refactor: TextSplitter 分隔符优先级重排，增加 Markdown 标题前缀拼接
Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>